swagger za prikaz sastojaka
